feat: separate security filter into statless and non statless for jwt and oauth2 respectively